Criando o JAR da aplicação

--- a/ChallengeDashboard/src/main/resources/application.properties
+++ b/ChallengeDashboard/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+
 server.port=8080
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
